k8s/server.yaml
apiVersion: v1
kind: Service
metadata:
  name: dvision-motion
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: api-port
  selector:
    name: dvision-motion

---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: dvision-motion
spec:
  replicas: 1
  template:
    metadata:
      name: dvision-motion
      labels:
        name: dvision-motion
    spec:
      containers:
      - name: dvision-motion
        image: PLACEHOLDER_IMAGE_TAG
        resources:
          limits:
            memory: "400Mi"
            cpu: "100m"
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: api-port
        livenessProbe:
          initialDelaySeconds: 200
          periodSeconds: 10
          httpGet:
            path: /
            port: api-port
